Pilar3/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stickerchain-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    # Este es el subdominio desde donde el frontend consumirá la API del backend
    - api.stickerchain.lat
    # Aquí se guardará físicamente la clave privada y el certificado emitido
    secretName: stickerchain-tls-secret
  rules:
  - host: api.stickerchain.lat
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nct-service
            port:
              number: 80
